<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/speler1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/radioGroup2"
        android:layout_marginTop="5dp"
        android:text="@string/speler2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/radioGroup3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="5dp"
        android:text="@string/speler3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginRight="32dp"
        android:layout_marginTop="-5dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio11ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio12ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio13ClickHandler" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/radioGroup1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/radioGroup1"
        android:layout_marginRight="29dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio21ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio22ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio23ClickHandler" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@id/radioGroup2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio31ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio32ClickHandler"
            android:paddingRight="10dp" />

        <RadioButton
            android:id="@+id/radio33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio33ClickHandler" />

    </RadioGroup>
    
   <TextView
       android:id="@+id/textView4.1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/button1"
       android:layout_marginTop="30dp"
       android:text="1."
       android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4.1"
        android:layout_marginTop="5dp"
        android:text="2."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5.2"
        android:layout_marginTop="5dp"
        android:text="3."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5.2"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView4.1"
        android:text="@string/speler1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView5.2"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:text="@string/speler2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView6.3"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:text="@string/speler3"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   <TextView
        android:id="@+id/textView8.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6.3"
        android:layout_marginTop="17dp"
        android:text="1."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView9.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8.1"
        android:layout_marginTop="5dp"
        android:text="2."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView10.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView9.2"
        android:layout_marginTop="5dp"
        android:text="3."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView8.1"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="17dp"
        android:text="@string/speler1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView9.2"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="5dp"
        android:text="@string/speler2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView10.3"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="5dp"
        android:text="@string/speler3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginRight="14dp"
        android:layout_marginTop="-20dp" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="1-2-3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1-2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="1-3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="2-3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView15"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView19"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
        
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView23"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView27"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView31"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
        
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView10"
        android:layout_marginRight="14dp" >

        <TextView
            android:id="@+id/textView35"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

	<Button
	    android:id="@+id/button1"
	    android:layout_width="60dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/radioGroup3"
	    android:layout_marginLeft="50dp"
	    android:layout_marginTop="10dp"
	    android:onClick="scoretoevoegenClickHandler"
	    android:text="@string/ok" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="60dp"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/textView4.1"
	    android:layout_centerHorizontal="true"
	    android:onClick="resetClickHandler"
	    android:text="@string/reset" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/button2"
	    android:layout_alignBottom="@+id/button2"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="50dp"
	    android:onClick="saveClickHandler"
	    android:text="@string/save" />

</RelativeLayout>

